# internal/apis/operations/topup/save_topup_gold_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package topup
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/yahfiilham/gold-store-demo/pkg/models"
+)
+
+// SaveTopupGoldCreatedCode is the HTTP code returned for type SaveTopupGoldCreated
+const SaveTopupGoldCreatedCode int = 201
+
+/*SaveTopupGoldCreated success
+
+swagger:response saveTopupGoldCreated
+*/
+type SaveTopupGoldCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewSaveTopupGoldCreated creates SaveTopupGoldCreated with default headers values
+func NewSaveTopupGoldCreated() *SaveTopupGoldCreated {
+
+	return &SaveTopupGoldCreated{}
+}
+
+// WithPayload adds the payload to the save topup gold created response
+func (o *SaveTopupGoldCreated) WithPayload(payload *models.BaseResponse) *SaveTopupGoldCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the save topup gold created response
+func (o *SaveTopupGoldCreated) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SaveTopupGoldCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*SaveTopupGoldDefault error
+
+swagger:response saveTopupGoldDefault
+*/
+type SaveTopupGoldDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewSaveTopupGoldDefault creates SaveTopupGoldDefault with default headers values
+func NewSaveTopupGoldDefault(code int) *SaveTopupGoldDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &SaveTopupGoldDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the save topup gold default response
+func (o *SaveTopupGoldDefault) WithStatusCode(code int) *SaveTopupGoldDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the save topup gold default response
+func (o *SaveTopupGoldDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the save topup gold default response
+func (o *SaveTopupGoldDefault) WithPayload(payload *models.BaseResponse) *SaveTopupGoldDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the save topup gold default response
+func (o *SaveTopupGoldDefault) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SaveTopupGoldDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
