# internal/apis/operations/transaction/get_mutation_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package transaction
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/yahfiilham/gold-store-demo/pkg/models"
+)
+
+// GetMutationOKCode is the HTTP code returned for type GetMutationOK
+const GetMutationOKCode int = 200
+
+/*GetMutationOK success
+
+swagger:response getMutationOK
+*/
+type GetMutationOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *GetMutationOKBody `json:"body,omitempty"`
+}
+
+// NewGetMutationOK creates GetMutationOK with default headers values
+func NewGetMutationOK() *GetMutationOK {
+
+	return &GetMutationOK{}
+}
+
+// WithPayload adds the payload to the get mutation o k response
+func (o *GetMutationOK) WithPayload(payload *GetMutationOKBody) *GetMutationOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get mutation o k response
+func (o *GetMutationOK) SetPayload(payload *GetMutationOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMutationOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetMutationDefault error
+
+swagger:response getMutationDefault
+*/
+type GetMutationDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewGetMutationDefault creates GetMutationDefault with default headers values
+func NewGetMutationDefault(code int) *GetMutationDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetMutationDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get mutation default response
+func (o *GetMutationDefault) WithStatusCode(code int) *GetMutationDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get mutation default response
+func (o *GetMutationDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get mutation default response
+func (o *GetMutationDefault) WithPayload(payload *models.BaseResponse) *GetMutationDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get mutation default response
+func (o *GetMutationDefault) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMutationDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
