# pkg/models/base_request.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// BaseRequest base request
+//
+// swagger:model baseRequest
+type BaseRequest struct {
+
+	// account number
+	AccountNumber string `json:"accountNumber,omitempty"`
+
+	// gold
+	Gold float64 `json:"gold,omitempty"`
+
+	// price
+	Price float64 `json:"price,omitempty"`
+}
+
+// Validate validates this base request
+func (m *BaseRequest) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this base request based on context it is used
+func (m *BaseRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BaseRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BaseRequest) UnmarshalBinary(b []byte) error {
+	var res BaseRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
