# pkg/models/transaction.go
@@ -1,0 +1,185 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Transaction transaction
+//
+// swagger:model transaction
+type Transaction struct {
+	ModelID
+
+	ModelLogTime
+
+	AccountData
+
+	PriceData
+
+	TransactionData
+}
+
+// UnmarshalJSON unmarshals this object from a JSON structure
+func (m *Transaction) UnmarshalJSON(raw []byte) error {
+	// AO0
+	var aO0 ModelID
+	if err := swag.ReadJSON(raw, &aO0); err != nil {
+		return err
+	}
+	m.ModelID = aO0
+
+	// AO1
+	var aO1 ModelLogTime
+	if err := swag.ReadJSON(raw, &aO1); err != nil {
+		return err
+	}
+	m.ModelLogTime = aO1
+
+	// AO2
+	var aO2 AccountData
+	if err := swag.ReadJSON(raw, &aO2); err != nil {
+		return err
+	}
+	m.AccountData = aO2
+
+	// AO3
+	var aO3 PriceData
+	if err := swag.ReadJSON(raw, &aO3); err != nil {
+		return err
+	}
+	m.PriceData = aO3
+
+	// AO4
+	var aO4 TransactionData
+	if err := swag.ReadJSON(raw, &aO4); err != nil {
+		return err
+	}
+	m.TransactionData = aO4
+
+	return nil
+}
+
+// MarshalJSON marshals this object to a JSON structure
+func (m Transaction) MarshalJSON() ([]byte, error) {
+	_parts := make([][]byte, 0, 5)
+
+	aO0, err := swag.WriteJSON(m.ModelID)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO0)
+
+	aO1, err := swag.WriteJSON(m.ModelLogTime)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO1)
+
+	aO2, err := swag.WriteJSON(m.AccountData)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO2)
+
+	aO3, err := swag.WriteJSON(m.PriceData)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO3)
+
+	aO4, err := swag.WriteJSON(m.TransactionData)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO4)
+	return swag.ConcatJSON(_parts...), nil
+}
+
+// Validate validates this transaction
+func (m *Transaction) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with ModelID
+	if err := m.ModelID.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelLogTime
+	if err := m.ModelLogTime.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with AccountData
+	if err := m.AccountData.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with PriceData
+	if err := m.PriceData.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with TransactionData
+	if err := m.TransactionData.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validate this transaction based on the context it is used
+func (m *Transaction) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with ModelID
+	if err := m.ModelID.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelLogTime
+	if err := m.ModelLogTime.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with AccountData
+	if err := m.AccountData.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with PriceData
+	if err := m.PriceData.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with TransactionData
+	if err := m.TransactionData.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Transaction) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Transaction) UnmarshalBinary(b []byte) error {
+	var res Transaction
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
