# pkg/models/transaction_data.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// TransactionData transaction data
+//
+// swagger:model transactionData
+type TransactionData struct {
+
+	// gold
+	Gold float64 `json:"gold,omitempty" gorm:"type:decimal(10,3)"`
+
+	// type
+	// Enum: [topup buyback]
+	Type string `json:"type,omitempty"`
+}
+
+// Validate validates this transaction data
+func (m *TransactionData) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+var transactionDataTypeTypePropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["topup","buyback"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		transactionDataTypeTypePropEnum = append(transactionDataTypeTypePropEnum, v)
+	}
+}
+
+const (
+
+	// TransactionDataTypeTopup captures enum value "topup"
+	TransactionDataTypeTopup string = "topup"
+
+	// TransactionDataTypeBuyback captures enum value "buyback"
+	TransactionDataTypeBuyback string = "buyback"
+)
+
+// prop value enum
+func (m *TransactionData) validateTypeEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, transactionDataTypeTypePropEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *TransactionData) validateType(formats strfmt.Registry) error {
+	if swag.IsZero(m.Type) { // not required
+		return nil
+	}
+
+	// value enum
+	if err := m.validateTypeEnum("type", "body", m.Type); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this transaction data based on context it is used
+func (m *TransactionData) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *TransactionData) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *TransactionData) UnmarshalBinary(b []byte) error {
+	var res TransactionData
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
